<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_margin="@dimen/common_min"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/corner_radius">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_default"
                android:textStyle="bold"
                android:maxLines="3"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/common_min"
                android:layout_marginHorizontal="@dimen/common_min"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/card_view_content"/>

            <TextView
                android:id="@+id/tvSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:layout_marginBottom="@dimen/common_min"
                app:layout_constraintStart_toStartOf="@id/tvTitle"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/card_view_title"
                android:maxLength="30"/>

            <TextView
                android:id="@+id/tvSlash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" | "
                android:textColor="@color/gray"
                app:layout_constraintStart_toEndOf="@id/tvSource"
                app:layout_constraintTop_toTopOf="@id/tvSource"
                app:layout_constraintBottom_toBottomOf="@id/tvSource"
                />

            <TextView
                android:id="@+id/tvHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                app:layout_constraintStart_toEndOf="@id/tvSlash"
                app:layout_constraintTop_toTopOf="@id/tvSlash"
                app:layout_constraintBottom_toBottomOf="@id/tvSlash"
                tools:text="@string/card_date"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.cardview.widget.CardView>